play-button mobile fix

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -586,7 +586,7 @@ body {
 
 #games_glass {
     animation-name: none;
-    padding-bottom: 50px;
+    padding-bottom: 65px;
 }
 
 #games_stars {
